<resources>
    <string name="app_name">MyProject</string>
    <string name="title_events">Мероприятия</string>
    <string name="title_courses">Мои курсы</string>
    <string name="title_profile">Профиль</string>
    <string name="stay_button">Остаться</string>
    <string name="leave_button">Уйти</string>
    <string name="default_first_name">Валерия</string>
    <string name="default_last_name">Гиль</string>
    <string name="default_patronymic">Александровна</string>
    <string name="preference_first_name_key">FIRST NAME</string>
    <string name="preference_last_name_key">LAST NAME</string>
    <string name="preference_patronymic_key">PATRONYMIC</string>
    <string name="edit_button">Редактировать</string>
    <string name="cancel_button">Отменить</string>
    <string name="save_button">Сохранить</string>
    <string name="leave_message">Если уйти с экрана редактирования, изменения не сохраняться. Уйти?</string>
    <string name="tittle_rating">Рейтинг</string>
    <string name="title_details">ДЕТАЛИ</string>
    <string name="title_common_rating">Общий рейтинг</string>
    <string name="title_tests_accepted">Пройдено тестов</string>
    <string name="title_homeworks_done">Выполнено домашек</string>
    <string name="default_common_rating">2/30</string>
    <string name="default_tests_cnt">15/18</string>
    <string name="default_hw_cnt">12/18</string>
    <string name="icon_rating_description">Icon for common rating</string>
    <string name="default_scores">182</string>
    <string name="title_20_lessons">20 занятий</string>
    <string name="title_gone">Прошло</string>
    <string name="title_left">Осталось</string>
    <string name="title_10_lessons">10 занятий</string>
    <string name="title_scores">балла</string>
    <string name="title_courses_done">Пройденные курсы</string>
    <string name="dec_2017">ДЕК 2017</string>
    <string name="title_done">Сдан</string>
    <string name="_1_android">Курс №1. Android</string>
    <string name="_315">315 баллов</string>
    <string name="march_2017">МАРТ 2017</string>
    <string name="not_done">Не сдан</string>
    <string name="_2_android">Курс №2. Android</string>
    <string name="_26">26 баллов</string>
    <string name="title_progress">Успеваемость</string>
    <string name="login">ЛОГИН</string>
    <string name="password">ПАРОЛЬ</string>
    <string name="enter">ВОЙТИ</string>
    <string name="actual_events">Актуальные</string>
    <string name="all">Все</string>

    <plurals name="scores_plurals">
        <item quantity="zero">баллов</item>
        <item quantity="one">балл</item>
        <item quantity="two">балла</item>
        <item quantity="few">балла</item>
        <item quantity="many">баллов</item>
        <item quantity="other">баллов</item>
    </plurals>

    <string-array name="spinner_view">
        <item>Параметры</item>
        <item>По алфавиту</item>
        <item>По баллам</item>
        <item>Другой вид</item>
    </string-array>
</resources>
