<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3e4757"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/authorization_image"
            android:layout_width="206dp"
            android:layout_height="174dp"
            android:layout_marginStart="77dp"
            android:layout_marginTop="53dp"
            android:layout_marginEnd="77dp"
            android:layout_marginBottom="53dp"
            android:src="@drawable/bitmap_3_x"
            app:layout_constraintBottom_toTopOf="@id/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login"
            style="@style/Button"
            android:background="@drawable/rounded_grey_rectangle"
            android:hint="@string/login"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toTopOf="@id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authorization_image" />

        <EditText
            android:id="@+id/password"
            style="@style/Button"
            android:background="@drawable/rounded_grey_rectangle"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login" />

        <TextView
            android:id="@+id/enter"
            style="@style/Button"
            android:background="@drawable/rounded_yellow_rectangle"
            android:text="@string/enter"
            android:textColor="#333333"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>